[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scene/title_wide_data/title_wide_data.gd" id="1"]

[node name="Title-Wide Data" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 30.0
offset_top = 30.0
offset_right = 175.0
offset_bottom = 266.0

[node name="btn_get_catalog_items" type="Button" parent="VBoxContainer"]
offset_right = 145.0
offset_bottom = 31.0
text = "GetCatalogItems"

[node name="btn_get_publisher_data" type="Button" parent="VBoxContainer"]
offset_top = 35.0
offset_right = 145.0
offset_bottom = 66.0
text = "GetPublisherData"

[node name="btn_get_store_items" type="Button" parent="VBoxContainer"]
offset_top = 70.0
offset_right = 145.0
offset_bottom = 101.0
text = "GetStoreItems"

[node name="btn_get_time" type="Button" parent="VBoxContainer"]
offset_top = 105.0
offset_right = 145.0
offset_bottom = 136.0
text = "GetTime"

[node name="btn_title_data" type="Button" parent="VBoxContainer"]
offset_top = 140.0
offset_right = 145.0
offset_bottom = 171.0
text = "GetTitleData"

[node name="btn_title_news" type="Button" parent="VBoxContainer"]
offset_top = 175.0
offset_right = 145.0
offset_bottom = 206.0
text = "GetTitleNews"

[node name="lbl_json_parse_result" type="Label" parent="VBoxContainer"]
offset_top = 210.0
offset_right = 145.0
offset_bottom = 236.0
text = "json_parse_result"

[node name="value" type="TextEdit" parent="VBoxContainer/lbl_json_parse_result"]
offset_top = 30.0
offset_right = 506.0
offset_bottom = 171.0

[connection signal="pressed" from="VBoxContainer/btn_get_catalog_items" to="." method="_on_btn_get_catalog_items_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_get_publisher_data" to="." method="_on_btn_get_publisher_data_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_get_store_items" to="." method="_on_btn_get_store_items_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_get_time" to="." method="_on_btn_get_time_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_title_data" to="." method="_on_btn_title_data_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_title_news" to="." method="_on_btn_title_news_pressed"]
